Remplace console.log by log object

--- a/sources/webcore/var/www/html/canopsis/index.html
+++ b/sources/webcore/var/www/html/canopsis/index.html
@@ -29,6 +29,7 @@
 
 		<!-- Application -->
 		<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading Canopsis ...';</script>
+		<script type="text/javascript" src="app/lib/log.js"></script>
 		<script type="text/javascript" src="app/lib/tools.js"></script>
 		<script type="text/javascript" src="app/lib/renderers.js"></script>
 		<script type="text/javascript" src="app.js"></script>
