--- a/sources/webcore/var/www/html/canopsis/index.html
+++ b/sources/webcore/var/www/html/canopsis/index.html
@@ -24,8 +24,9 @@
 
 		<!-- Highcharts -->
 		<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading Highcharts ...';</script>
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-                <script type="text/javascript" src="../Highcharts/js/highcharts.js"></script>
+		<!-- <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script> -->
+		<script type="text/javascript" src="../Highcharts/jquery-1.6.2.min.js"></script>
+        <script type="text/javascript" src="../Highcharts/js/highcharts.js"></script>
 
 		<!-- Application -->
 		<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading Canopsis ...';</script>
