--- a/sources/webcore/var/www/html/canopsis/index.html
+++ b/sources/webcore/var/www/html/canopsis/index.html
@@ -63,10 +63,10 @@
         <!-- <script type="text/javascript" src="../RGraph/libraries/RGraph.line.js""></script> -->       
  
         <script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading Highcharts ...';</script>
-        <!-- <script type="text/javascript" src="resources/lib/Highcharts/js/highcharts.js"></script> -->
+        <script type="text/javascript" src="resources/lib/Highcharts/js/highcharts.js"></script>
         <script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading Highstock ...';</script>
-        <script type="text/javascript" src="resources/lib/Highstock/js/highstock.src.js"></script>
-        <script type="text/javascript" src="resources/lib/Highstock/js/modules/exporting.js"></script>
+        <!-- <script type="text/javascript" src="resources/lib/Highstock/js/highstock.src.js"></script> -->
+        <!-- <script type="text/javascript" src="resources/lib/Highstock/js/modules/exporting.js"></script> -->
 
 		<!-- Application -->
 		<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading Canopsis ...';</script>
