--- a/sources/webcore/var/www/html/canopsis/auth.html
+++ b/sources/webcore/var/www/html/canopsis/auth.html
@@ -1,41 +1,60 @@
 <html>
 <head>
-    	<title>authentification</title>
-    	<link rel="stylesheet" type="text/css" href="resources/css/ext-all.css">
-    	<script type="text/javascript" src="resources/lib/jquery.js"></script>
-</head>
+    	<title>Authentification</title>
+	<link rel="stylesheet" type="text/css" href= "resources/lib/extjs/resources/css/ext-all.css">
+	<link rel="stylesheet" type="text/css" href="themes/default/theme.css">
+        <link rel="stylesheet" type="text/css" href="themes/canopsis/theme.css">
 
-	
-<!-- My functions ------------------------------------------------->
-	
+	<script type="text/javascript" src="resources/lib/extjs/ext-all.js"></script>
+</head>
+<body>
+	<div id="div-header">
+		<div id="title"><h1>Canopsis</h1></div>
+		<div id="logo"/></div>
+	</div>
+
+	<div id="form" style='margin: 50 auto; width: 350;'></div>
+
 	<script type="text/javascript">
-	
-	$('#login_form').submit(function() {
-		var login = $("#login").val();
-		var password = $("#password").val();
-		$.getJSON("/auth/" + login + "/" + password, function(json){
-			(function(){ 
-				var url = getURLParameter('url');
-				alert (url);
-				if (url != 'null'){
-					$(location).attr('href',url);
-				} else {
-					$(location).attr('href','/');
-				}
-			})()
+		Ext.require([
+			'Ext.form.Panel',
+		]);
+
+		Ext.onReady(function(){
+			var winform = Ext.create('Ext.form.Panel', {
+				url:'save-form.php',
+				frame:true,
+				title: 'Authentification',
+				renderTo: 'form',
+				fieldDefaults: {
+					msgTarget: 'side',
+					labelWidth: 75
+				},
+				defaultType: 'textfield',
+				defaults: {
+					anchor: '100%'
+				},
+		
+				items: [{
+					fieldLabel: 'Login',
+					name: 'login',
+					allowBlank:false
+				},{
+					fieldLabel: 'Password',
+					name: 'passwd',
+					allowBlank:false
+				}],
+		
+				buttons: [{
+					text: 'Login'
+				}]
+			});
+
+
 		});
-		alert('identifiant ou mot de passe incorrect');
-		return false;
-	});
-	
-	//regex function to get a parametre in the url
-	function getURLParameter(name) {
-		return decodeURI(
-			(RegExp(name + '=' + '(.+?)(&|$)').exec(location.search)||[,null])[1]
-		);
-	}
 
 	</script>
-	
+
+
 </body>
 </html>
