Basic authentification system added (with a variable)

--- a/sources/webcore/var/www/html/canopsis/auth.html
+++ b/sources/webcore/var/www/html/canopsis/auth.html
@@ -17,6 +17,7 @@
 
 	<script type="text/javascript">
 		
+		//function to return parameters in the url
 		function getURLParameter(name) {
 			return decodeURI(
 				(RegExp(name + '=' + '(.+?)(&|$)').exec(location.search)||[,null])[1]
