--- a/sources/webcore/var/www/html/canopsis/index.html
+++ b/sources/webcore/var/www/html/canopsis/index.html
@@ -35,8 +35,7 @@
 
 	<!-- Jquery -->
 	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading JQuery ...';</script>
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-	<!-- <script type="text/javascript" src="../Highcharts/jquery-1.6.2.min.js"></script> -->
+	<script type="text/javascript" src="resources/lib/jquery/jquery.min.js"></script>
         
         <script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading jqPlot ...';</script>
         <script type="text/javascript" src="resources/lib/jqplot/jquery.jqplot.min.js"></script>
