--- a/sources/webcore/var/www/canopsis/index.html
+++ b/sources/webcore/var/www/canopsis/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    	<title>Canopsis</title>
+    <title>Canopsis</title>
 	<!-- Theme -->
 	<link rel="stylesheet" type="text/css" href= "resources/lib/extjs/resources/css/ext-all.css">
 	<!-- <link rel="stylesheet" type="text/css" href= "../RGraph/css/common.css"> -->
@@ -14,6 +14,8 @@
 	<link rel="stylesheet" type="text/css" href="resources/lib/jquery-ui/themes/base/jquery.ui.all.css">
 	<link rel="stylesheet" type="text/css" href="resources/lib/pnotify/jquery.pnotify.default.css">
 	<link rel="stylesheet" type="text/css" href="resources/lib/pnotify/icons/jquery.pnotify.default.icons.css">
+
+	<link rel="stylesheet" type="text/css" href="/ui/widget.css">
 
 </head>
 <body>
