Load widgets css

--- a/sources/webcore/var/www/canopsis/index.html
+++ b/sources/webcore/var/www/canopsis/index.html
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" type="text/css" href="resources/lib/pnotify/jquery.pnotify.default.css">
 	<link rel="stylesheet" type="text/css" href="resources/lib/pnotify/icons/jquery.pnotify.default.icons.css">
 
-	<link rel="stylesheet" type="text/css" href="/ui/widget.css">
+	<link rel="stylesheet" type="text/css" href="/ui/widgets.css">
 
 </head>
 <body>
