--- a/sources/webcore/var/www/canopsis/auth.html
+++ b/sources/webcore/var/www/canopsis/auth.html
@@ -8,12 +8,12 @@
 	<script type="text/javascript" src="resources/lib/extjs/ext-all.js"></script>
 </head>
 <body>
-	<div id="div-header">
-		<div id="title"><h1>Canopsis</h1></div>
-		<div id="logo"/></div>
-	</div>
 
-	<div id="form" style='margin: 50 auto; width: 350;'></div>
+<div class='login'>
+	<div class='header'></div>
+	<div class='title'>Canopsis</div>
+	<div class='layout'></div>
+	<div id='form' class='form'>
 
 	<script type="text/javascript">
 		
@@ -113,6 +113,8 @@
 
 	</script>
 
+	</div>
+</div>
 
 </body>
 </html>
