--- a/sources/webcore/var/www/canopsis/index.html
+++ b/sources/webcore/var/www/canopsis/index.html
@@ -67,30 +67,28 @@
 		<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading JQuery ...';</script>
 		<script type="text/javascript" src="resources/lib/jquery/jquery.min.js"></script>
 		
-		<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading jqPlot ...';</script>
+		<!-- <script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading jqPlot ...';</script>
 		<script type="text/javascript" src="resources/lib/jqplot/jquery.jqplot.min.js"></script>
 		<script type="text/javascript" src="resources/lib/jqplot/plugins/jqplot.pieRenderer.min.js"></script>
 		<script type="text/javascript" src="resources/lib/jqplot/plugins/jqplot.canvasTextRenderer.min.js"></script>
 		<script type="text/javascript" src="resources/lib/jqplot/plugins/jqplot.canvasAxisLabelRenderer.min.js"></script>
-		<script type="text/javascript" src="resources/lib/jqplot/plugins/jqplot.dateAxisRenderer.js"></script>
+		<script type="text/javascript" src="resources/lib/jqplot/plugins/jqplot.dateAxisRenderer.js"></script> -->
 		
 		<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading jGauge ...';</script>
-		<!-- excanvas.min.js  jgauge-0.3.0.a3.js  jgauge-0.3.0.a3.min.js  jquery-1.4.2.min.js  jQueryRotate.min.js -->
 		<script type="text/javascript" src="resources/lib/jgauge/js/excanvas.min.js"></script>
-		<!-- <script type="text/javascript" src="resources/lib/jgauge/js/jquery-1.4.2.min.js"></script> -->
 		<script type="text/javascript" src="resources/lib/jgauge/js/jQueryRotate.min.js"></script>
 		<script type="text/javascript" src="resources/lib/jgauge/js/jgauge-0.3.0.a3.min.js"></script>
 
 		<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading pnotify ...';</script>
 		<script type="text/javascript" src="resources/lib/pnotify/jquery.pnotify.min.js"></script>
 
-		<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading gRaphael ...';</script>
+		<!-- <script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading gRaphael ...';</script> -->
 		<!-- <script type="text/javascript" src="resources/lib/gRaphael/raphael-min.js"></script> -->
 		<!-- <script type="text/javascript" src="resources/lib/gRaphael/g.raphael-min.js"></script> -->
 		<!-- <script type="text/javascript" src="resources/lib/gRaphael/g.line-min.js"></script> -->
 		<!-- <script type="text/javascript" src="resources/lib/gRaphael/g.pie-min.js"></script> -->
 
-		<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading RGraph ...';</script>
+		<!-- <script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading RGraph ...';</script> -->
 		<!-- <script type="text/javascript" src="../RGraph/excanvas/excanvas.original.js"></script> -->       
 		<!-- <script type="text/javascript" src="../RGraph/libraries/RGraph.common.core.js"></script> -->
 		<!-- <script type="text/javascript" src="../RGraph/libraries/RGraph.common.context.js"></script> -->       
@@ -98,10 +96,11 @@
 		<!-- <script type="text/javascript" src="../RGraph/libraries/RGraph.pie.js"></script> -->     
 		<!-- <script type="text/javascript" src="../RGraph/libraries/RGraph.line.js""></script> -->       
 	 
-		<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading Highcharts ...';</script>
-		<script type="text/javascript" src="resources/lib/Highcharts/js/highcharts.js"></script>
+		<!-- <script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading Highcharts ...';</script> -->
+		<!-- <script type="text/javascript" src="resources/lib/Highcharts/js/highcharts.js"></script> -->
+
 		<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading Highstock ...';</script>
-		<!-- <script type="text/javascript" src="resources/lib/Highstock/js/highstock.src.js"></script> -->
+		<script type="text/javascript" src="resources/lib/Highstock/js/highstock.src.js"></script>
 		<!-- <script type="text/javascript" src="resources/lib/Highstock/js/modules/exporting.js"></script> -->
 
 			<!-- Application -->
