--- a/sources/webcore/var/www/canopsis/reporting.html
+++ b/sources/webcore/var/www/canopsis/reporting.html
@@ -68,8 +68,8 @@
 	});
 
 	var reporting_view_id = 'view.root.test';
-	var reportingStart = 1323730800000;
-	var reportingStop = 1323817200000;
+	var reportStart = 1323730800000;
+	var reportStop = 1323817200000;
 
 	function createApplication(){
 		log.debug("Start ExtJS application ...", "[app]");
@@ -90,8 +90,8 @@
 				//pass reporting parameters
 				var content = Ext.create('canopsis.view.ReportView',{
 					view_id : reporting_view_id,
-					reportStartTs : reportingStart,
-					reportStopTs : reportingStop,
+					reportStart : reportStart,
+					reportStop : reportStop,
 					autoshow : true,
 					options : []});
 				reportViewport.add(content);
