--- a/sources/webcore/var/www/canopsis/reporting.html
+++ b/sources/webcore/var/www/canopsis/reporting.html
@@ -67,9 +67,9 @@
 		createApplication()
 	});
 
-	var reporting_view_id = 'view.root.test';
-	var reportStart = 1323990000000;
-	var reportStop = 1324076400000;
+	//var reporting_view_id = 'view.root.test';
+	//var reportStart = 1323990000000;
+	//var reportStop = 1324076400000;
 
 	function createApplication(){
 		log.debug("Start ExtJS application ...", "[app]");
