reporting : fixing big bugs, still in progress

--- a/sources/webcore/var/www/canopsis/reporting.html
+++ b/sources/webcore/var/www/canopsis/reporting.html
@@ -39,7 +39,7 @@
 	<link rel="stylesheet" type="text/css" href="/ui/widgets.css">
 
 </head>
-<body style="width:930px;height:1000px;">
+<body style="width:940px;height:600px;">
 
 	<script type="text/javascript" src="resources/lib/extjs/ext.js"></script>
 
@@ -67,10 +67,10 @@
 		createApplication()
 	});
 
-	//these are onlyfor testing purpose
-	//var reporting_view_id = 'view.root.test';
-	//var reportStart = 1323990000000;
-	//var reportStop = 1324076400000;
+	//these are only for testing purpose
+	var reporting_view_id = 'view.root.test3';
+	var reportStart = 1323990000000;
+	var reportStop = 1324076400000;
 
 	function createApplication(){
 		log.debug("Start ExtJS application ...", "[app]");
@@ -101,7 +101,5 @@
 	}
 	</script>
 	
-
-
 </body>
 </html>
