--- a/sources/webcore/var/www/canopsis/reporting.html
+++ b/sources/webcore/var/www/canopsis/reporting.html
@@ -68,9 +68,9 @@
 	});
 
 	//these are only for testing purpose
-	var reporting_view_id = 'view.root.test3';
-	var reportStart = 1323990000000;
-	var reportStop = 1324076400000;
+	//var reporting_view_id = 'view.root.test3';
+	//var reportStart = 1323990000000;
+	//var reportStop = 1324076400000;
 
 	function createApplication(){
 		log.debug("Start ExtJS application ...", "[app]");
