--- a/sources/webcore/var/www/canopsis/reporting.html
+++ b/sources/webcore/var/www/canopsis/reporting.html
@@ -25,7 +25,7 @@
 	<!-- Theme -->
 	<link rel="stylesheet" type="text/css" href= "resources/lib/extjs/resources/css/ext-all.css">
 	<!-- <link rel="stylesheet" type="text/css" href= "../RGraph/css/common.css"> -->
-	<link rel="stylesheet" type="text/css" href="resources/lib/jqplot/jquery.jqplot.min.css">
+	<!--<link rel="stylesheet" type="text/css" href="resources/lib/jqplot/jquery.jqplot.min.css">-->
 	<!-- <link rel="stylesheet" type="text/css" href="resources/css/ext-all.css"> -->
 	<link rel="stylesheet" type="text/css" href="themes/default/theme.css">
 	<link rel="stylesheet" type="text/css" href="themes/canopsis/theme.css">
@@ -42,6 +42,10 @@
 <body style="width:940px;height:10px;">
 
 	<script type="text/javascript" src="resources/lib/extjs/ext.js"></script>
+	
+	<!-- Ext localization javascript -->
+	<script type="text/javascript" id="extlocale"></script>
+	<script type="text/javascript" id="canopsislocale"></script>
 
 	<!-- Jquery -->
 	<script type="text/javascript" src="resources/lib/jquery/jquery.min.js"></script>
@@ -58,6 +62,7 @@
 	<script type="text/javascript" src="app/lib/log.js"></script>
 	<script type="text/javascript" src="app/lib/tools.js"></script>
 	<script type="text/javascript" src="app/lib/renderers.js"></script>
+	<script type="text/javascript" src="app/lib/locale.js"></script>
 
 	<!-- starting the reporting here -->
 	<script type="text/javascript">
