--- a/sources/webcore/var/www/canopsis/index.html
+++ b/sources/webcore/var/www/canopsis/index.html
@@ -24,7 +24,10 @@
 
 <html>
 <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
     <title>Canopsis</title>
+
 	<!-- Theme -->
 	<link rel="stylesheet" type="text/css" href= "resources/lib/extjs/resources/css/ext-all.css">
 	<!-- <link rel="stylesheet" type="text/css" href= "../RGraph/css/common.css"> -->
