report html : fixes

--- a/sources/webcore/var/www/canopsis/reporting.html
+++ b/sources/webcore/var/www/canopsis/reporting.html
@@ -71,8 +71,10 @@
 		var export_from = decoded_url.from
 		var export_to = decoded_url.to
 		var export_view_id = decoded_url.view
-		//log.debug('decoded_url.view : ' + decoded_url.view)
-		//log.debug('export_view_id : '+ export_view_id)
+		log.debug('decoded_url.view : ' + decoded_url.view)
+		log.debug('export_view_id : '+ export_view_id)
+		log.debug('decoded_url.from : ' + decoded_url.from)
+		log.debug('decoded_url.to : ' + decoded_url.to)
 	}
 		
 		
