report are now stocked in report gridFS

--- a/sources/webcore/var/www/canopsis/reporting.html
+++ b/sources/webcore/var/www/canopsis/reporting.html
@@ -83,6 +83,7 @@
 		Ext.Loader.setConfig({enabled:true});
 		//global.account = 'root'
 		
+		//check authentification
 		log.debug('Check auth ...', "[app]");
 		Ext.Ajax.request({
 			type: 'rest',
