--- a/sources/webcore/var/www/canopsis/index.html
+++ b/sources/webcore/var/www/canopsis/index.html
@@ -72,11 +72,16 @@
 		<!-- Jquery -->
 		<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading JQuery ...';</script>
 		<script type="text/javascript" src="resources/lib/jquery/jquery.min.js"></script>
+		<script type="text/javascript" src="resources/lib/jquery-ui/jquery-ui-1.8.16.custom.min.js"></script>
 		
 		<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading jGauge ...';</script>
 		<script type="text/javascript" src="resources/lib/jgauge/js/excanvas.min.js"></script>
 		<script type="text/javascript" src="resources/lib/jgauge/js/jQueryRotate.min.js"></script>
 		<script type="text/javascript" src="resources/lib/jgauge/js/jgauge-0.3.0.a3.min.js"></script>
+		
+		<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading jqGridable ...';</script>
+		<script type="text/javascript" src="resources/lib/jqGridable/jqGridable.js"></script>
+		
 
 		<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading pnotify ...';</script>
 		<script type="text/javascript" src="resources/lib/pnotify/jquery.pnotify.min.js"></script>
