--- a/sources/webcore/var/www/canopsis/index.html
+++ b/sources/webcore/var/www/canopsis/index.html
@@ -38,6 +38,9 @@
 	<link rel="stylesheet" type="text/css" href="resources/lib/jgauge/css/jgauge.css">
 
 	<link rel="stylesheet" type="text/css" href="resources/lib/jquery-ui/css/ui-lightness/jquery-ui-1.8.16.custom.css">
+	
+	<link rel="stylesheet" type="text/css" href="resources/lib/jqGridable/jqGridable.css">
+	
 	<link rel="stylesheet" type="text/css" href="resources/lib/pnotify/jquery.pnotify.default.css">
 	<link rel="stylesheet" type="text/css" href="resources/lib/pnotify/icons/jquery.pnotify.default.icons.css">
 
